# versioned-document-storage-api

./: .gitignore  Dockerfile.server  Dockerfile.worker  README.md  compose.yaml  pyproject.toml
app/: config.py  database.py  main.py
app/authentication/: services.py  tokenManager.py
app/background/: OtpService.py  celery_app.py
app/dependencies/: User.py
app/infrastructure/: file_storage.py  redis_client.py
app/models/: File.py  FileVersion.py  User.py
app/routes/: authRoutes.py  fileRoutes.py
app/schemas/: FileSchemas.py  Otp.py  Token.py  User.py
app/service/: File.py  File_service.py
app/utils/: hash_util.py
