[project]
name = "versioned-document-storage-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "fastapi[standard]>=0.116.1",
    "redis>=6.3.0",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
]
