[project]
name = "versioned-document-storage-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "celery>=5.5.3",
    "fastapi[standard]>=0.116.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.10.1",
    "redis>=6.3.0",
    "sqlalchemy[typing]>=2.0.42",
    "uvicorn>=0.35.0",
]
