[project]
name = "versioned-document-storage-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "celery>=5.5.3",
    "fastapi[standard]>=0.116.1",
    "greenlet>=3.2.4",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "redis>=6.3.0",
    "sqlalchemy[typing]>=2.0.42",
    "uvicorn>=0.35.0",
]
